fixed jumping cursor

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -56,5 +56,6 @@
   pointer-events: none;
   transition: opacity 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
+  transition: visibility 1s ease-in-out;
   opacity: 0%;
 }
